syntax = "proto3";
option java_package = "com.dj.im.sdk.proto";
option java_outer_classname = "PrPushReadConversation";

message PushReadConversationResponse {
    // 会话key
    string conversationKey = 1;
    // 已读用户名
    string readUserName = 2;
}
